# gd-autoplay-mod

./: CMakeLists.txt  mod.json
.github/workflows/: build.yml
scr/: main.cpp
src/: main.cpp
