cmake_minimum_required(VERSION 3.21)
set(CMAKE_CXX_STANDARD 20)
project(AutoPlayer VERSION 1.0.0)
if (NOT DEFINED ENV{GEODE_SDK})
    message(FATAL_ERROR "No GEODE_SDK")
endif()
add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
add_library(${PROJECT_NAME} SHARED src/main.cpp)
setup_geode_mod(${PROJECT_NAME})
